@@ -73,7 +73,7 @@ public class BrokerOperationBundle {
         BROKER_DISCOVERY_SET_ACTIVE_BROKER(API.BROKER_DISCOVERY_SET_ACTIVE_BROKER, null),
         PASSTHROUGH(API.PASSTHROUGH, null),
         BROKER_READ_RESTRICTIONS_MANAGER(API.READ_RESTRICTIONS_MANAGER, null),
-        MSAL_IS_QR_PIN_AVAILABLE(API.IS_QR_PIN_AVAILABLE, null),
+        MSAL_GET_PREFERRED_AUTH_METHOD(API.GET_PREFERRED_AUTH_METHOD, null),
         BROKER_INDIVIDUAL_LOGS_UPLOAD(API.BROKER_INDIVIDUAL_LOGS_UPLOAD, null);
       
         final API mContentApi;
