@@ -4,6 +4,7 @@ V.Next 2
 
 V.Next
 ---------
+- [MINOR] Rename "is QR + PIN available" API to "get preferred auth method". (#2288)
 - [MINOR] Changes to support safe deserialization of KeyPair in Linux (#2319)
 - [MINOR] Request camera permission on the WebViewAuthorizationFragment (#2258)
 - [MINOR] Deprecate legacy telemetry code (#2327)
